# nexo-tax

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  shell.nix
.claude/: settings.local.json
.github/workflows/: deploy.yml
data/: sample_nexo_export.csv
docs/: CARD_ANALYSIS_SPECS.md  INTEREST_SPECS.md  SPECS.md  TAX_GUIDE.md  WEB_SPECS.md
nexo_tax/: api.py  calculator.py  models.py  parser.py  report.py
nexo_tax/cli/: main.py
tests/: test_api_validation.py  test_calculator.py  test_card_analysis.py  test_fx.py  test_integration.py  test_parser.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/public/: _headers  manifest.json  robots.txt  sample_nexo_export.csv  sitemap.xml
web/public/nexo_tax/: api.py  fx.py  models.py  report.py
web/public/nexo_tax/cli/: main.py
web/scripts/: copy-nexo-tax.js
web/src/: App.css  App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
web/src/components/: DownloadLinks.tsx  FeedbackForm.tsx  FileUpload.tsx  Footer.tsx  InfoSection.tsx  ResultsView.tsx  YearSelector.tsx
web/src/hooks/: usePlausible.ts  usePyodide.ts
